# lab3

./: CMakeLists.txt  README.md  test.cpp
Libaries/Dynamic_array/: Dynamic_array.cpp  Dynamic_array.h  Dynamic_array.md
Libaries/Lincked_list/: Lincked_list.cpp  Lincked_list.h  Lincked_list.md
py_graphics/: task2.1.py  task2.2.py  task2.3.py
tasks/: Task1.cpp  Task2.1.cpp  task2.2.cpp  task2.3.cpp
